# Real-time-banking-datapipeline

./: .gitignore  README.md  docker-compose.yml  dockerfile-airflow.dockerfile  main.py  pyproject.toml  register.ps1  sample.parquet
OLTP/: schema.sql
banking_data_pipeline/: dbt_project.yml  example_profile.yml
data_generator/: __init__.py  config.py  database.py  generate_data.py
docker/postgres/data/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
docker/postgres/data/base/16384/: 113  1247  1247_fsm  1247_vm  1249  1249_fsm  1255  (+265 more)
docker/postgres/data/global/: 1260  1260_vm  1262  2671  2672  2676  pg_control  pg_internal.init
docker/postgres/data/pg_xact/: 0000
kafka-debezium/: generate_and_post_connector.py
kafka_debezium/: env.txt  generate_and_post_connector.py
sql/snowflake/foundation/: 01_create_warehouse.sql  02_create_database.sql  03_create_schemas.sql  verify.sql
sql/snowflake/ingestion/: 04_storage_integration.sql  05_file_format.sql  06_external_stage.sql  07_notification_integration.sql
sql/snowflake/ingestion/raw_events/: 08_create_pipe.sql  09_create_raw_events.sql  verifyingestion.sql
src/banking_pipeline/data_generator/: generate_data.py
src/banking_pipeline/data_lake/: adls_client.py  bronze_writer.py  buffer.py  config.py  credentials.py  test_bronze_writer.py  test_connection.py  test_parquet.py  test_parquet_upload.py  test_read_parquet.py  upload_test.py  uploader.py
src/banking_pipeline/data_lake/writers/: json_writer.py  parquet_writer.py
src/banking_pipeline/kafka/: config.py  consumer.py  test_consumer.py
(+20 files in other folders)
