[project]
name = "real-time-banking-datapipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-snowflake>=1.11.5",
    "faker>=40.23.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
